# dissonance

./: ChangeLog  Makefile  Makefile.am  NEWS  autogen.sh  config.h  config.status  configure  configure.ac  libtool
data/: pragha.1  pragha.desktop
po/: POTFILES.in  cs.po  de.po  el.po  es.po  fr.po  hu.po  it.po  ja.po  nl.po  no.po  pl.po  pragha.pot  pt.po  pt_BR.po  ru.po  sv.po  tr.po  uk.po  zh_CN.po
src/: Makefile  Makefile.am  consonance  current_playlist.c  db.c  dbus.c  glyr-related.c  gui.c  init.c  keybinder.c  librarytree.c  menu.c  mpris.c  musicobject.c  panel.c  playback_cdda.c  playback_mp3.c  playlist.c  pragha.c  pragha.h  pref.c  statusicon.c  tags.c  threads.c  utils.c
